[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/player/bullet.png" type="Texture" id=1]
[ext_resource path="res://src/shared/rpg/MoveAndFollow2D.gd" type="Script" id=2]
[ext_resource path="res://src/shared/rpg/HitBox2D.gd" type="Script" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.286624, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.495549, 0.818182 ), -0.0972584, -0.0972584, 0, 0, Vector2( 1, 0.322727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=6]
radius = 3.82143

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 3 )
damage = 10
knockback_force = 50

[node name="Particles2D" type="Particles2D" parent="."]
amount = 32
lifetime = 0.3
local_coords = false
process_material = SubResource( 5 )

[node name="MoveAndFollow2D" type="Node" parent="."]
script = ExtResource( 2 )
speed = 500
direction = Vector2( 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="bullet" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -1, 0 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="HomingArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HomingArea"]
polygon = PoolVector2Array( 5, 10, 5, -10, 100, -60, 100, 60 )

[connection signal="timeout" from="LifeTime" to="." method="queue_free"]
[connection signal="body_entered" from="HomingArea" to="MoveAndFollow2D" method="set_target"]
