[gd_scene load_steps=4 format=3 uid="uid://l01avqt2k7k2"]

[ext_resource type="Script" path="res://src/skills/air_gust/air_gust_item.gd" id="1_sns0b"]
[ext_resource type="Script" path="res://src/shared/rpg/HitBox2D.gd" id="2_k4fxo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s76fd"]
size = Vector2(82, 20)

[node name="AirGustItem" type="CharacterBody2D"]
script = ExtResource("1_sns0b")

[node name="HitBox2D" type="Area2D" parent="."]
script = ExtResource("2_k4fxo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox2D"]
shape = SubResource("RectangleShape2D_s76fd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
